objects/Delayed_Order_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Automatic_Emails__c</fullName>
        <inlineHelpText>Maximum number of email delay notifications about a delayed order line date change before call out.</inlineHelpText>
        <label>Automatic Emails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Moved_In_Tier_1__c</fullName>
        <label>Days Moved In - Tier 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Moved_In_Tier_2__c</fullName>
        <label>Days Moved In - Tier 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Moved_Last__c</fullName>
        <inlineHelpText>Days moved from last promise date communicated to customer.</inlineHelpText>
        <label>Days Moved - Last</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Moved_Line_Item_Value_Gift_Card__c</fullName>
        <label>Days Moved - Line Item Value Gift Card</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Moved_Original__c</fullName>
        <inlineHelpText>Days moved from original customer promise date.</inlineHelpText>
        <label>Days Moved - Original</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Moved_Out_Tier_1__c</fullName>
        <label>Days Moved Out - Tier 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Moved_Out_Tier_2__c</fullName>
        <label>Days Moved Out - Tier 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Moved_Special_Attention__c</fullName>
        <inlineHelpText>If the order line item Current Delay Date is this number of days or more from Original Available Date, it requires manual processing. This is typically a large number of days out (usually more than 60 days).</inlineHelpText>
        <label>Days Moved Special Attention</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Moved_Threshold_In__c</fullName>
        <inlineHelpText>Number of days moved in threshold before customer action is taken. This is the number of days between the order line item current available date and the order line item current delay date.</inlineHelpText>
        <label>Days Moved Threshold - In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Moved_Threshold_Out__c</fullName>
        <inlineHelpText>Number of days moved out threshold before customer action is taken. This is the number of days between the order line item current available date and the order line item current delay date.</inlineHelpText>
        <label>Days Moved Threshold - Out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lines_Moved_Amount_Tier_1__c</fullName>
        <label>Lines Moved Amount - Tier 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lines_Moved_Amount_Tier_2__c</fullName>
        <label>Lines Moved Amount - Tier 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Regular_Notifications__c</fullName>
        <label>Maximum Regular Notifications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Automatic_Emails__c</fullName>
        <label>New Automatic Emails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Days_Moved_Special_Attention__c</fullName>
        <label>New Days Moved Special Attention</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Days_Moved_Threshold_In__c</fullName>
        <label>New Days Moved Threshold - In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Days_Moved_Threshold_Out__c</fullName>
        <label>New Days Moved Threshold - Out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Auto_Email_After_Callout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Auto Email After Callout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Amount_Tier_1__c</fullName>
        <label>Order Amount - Tier 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Type_Category__c</fullName>
        <label>Order Type Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Home Office</fullName>
                </value>
                <value>
                    <fullName>Specialty Group</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Delayed Order Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Order_Type_Category__c</columns>
        <columns>Automatic_Emails__c</columns>
        <columns>Days_Moved_Special_Attention__c</columns>
        <columns>Days_Moved_Last__c</columns>
        <columns>Days_Moved_Original__c</columns>
        <columns>Days_Moved_In_Tier_1__c</columns>
        <columns>Days_Moved_In_Tier_2__c</columns>
        <columns>Days_Moved_Line_Item_Value_Gift_Card__c</columns>
        <columns>Order_Amount_Tier_1__c</columns>
        <columns>Lines_Moved_Amount_Tier_1__c</columns>
        <columns>Lines_Moved_Amount_Tier_2__c</columns>
        <columns>Maximum_Regular_Notifications__c</columns>
        <columns>No_Auto_Email_After_Callout__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CON_Business_Administrator_Delayed_Order_Rule</fullName>
        <filterScope>Queue</filterScope>
        <label>CON Business Administrator</label>
        <queue>CON_Business_Administrator</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSC_Business_Administrators_Delayed_Order_Rule</fullName>
        <filterScope>Queue</filterScope>
        <label>CSC Business Administrators</label>
        <queue>CSC_Business_Administrators</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>DOR-{0}</displayFormat>
        <label>Delayed Order Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delayed Order Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>